--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -37,7 +37,8 @@
     }
   },
   "manage-user": {
-    "add": "Thêm mới người dùng",
+    "text_add": "Thêm mới người dùng",
+    "text_edit": "Cập nhật thông tin người dùng",
     "email": "Email",
     "password": "Mật khẩu",
     "first-name": "Tên",
@@ -48,6 +49,7 @@
     "position": "Chức danh",
     "role": "Vai trò",
     "image": "Ảnh đại diện",
-    "save": "Lưu"
+    "save": "Lưu",
+    "edit": "Cập nhật"
   }
 }
