--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -51,5 +51,9 @@
     "image": "Ảnh đại diện",
     "save": "Lưu",
     "edit": "Cập nhật"
+  },
+  "homepage": {
+    "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
+    "more-inf": "Xem thêm"
   }
 }
