--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,7 +12,7 @@
     "welcome": "Welcome, "
   },
   "banner": {
-    "title1": "MEDICAL BACKGROUND",
+    "title1": "MEDICAL PLATFORM",
     "title2": "COMPREHENSIVE HEALTH CARE",
     "child1": "specialized examination",
     "child2": "Remote examination",
@@ -51,5 +51,9 @@
     "image": "Avatar",
     "save": "Save",
     "edit": "Update"
+  },
+  "homepage": {
+    "outstanding-doctor": "Last week's featured doctor",
+    "more-inf": "More Infor"
   }
 }
