--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -34,6 +34,9 @@
       "manage-specialty": "Manage specialties",
       "handbook": "Handbook",
       "manage-handbook": "Manage handbook"
+    },
+    "doctor": {
+      "manage-schedule": "Manage Doctor's schedule"
     }
   },
   "manage-user": {
@@ -55,5 +58,34 @@
   "homepage": {
     "outstanding-doctor": "Last week's featured doctor",
     "more-inf": "More Infor"
+  },
+  "manage-schedule": {
+    "title": "Manage doctor's examination plan",
+    "choose-doctor": "Choose doctor",
+    "choose-date": "Choose date",
+    "save": "Save"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Schedule",
+      "no-schedule": "The doctors do not have appointments during this time, please choose another time!",
+      "choose": "Choose ",
+      "book-free": " and book (free)"
+    }
+  },
+  "admin": {
+    "manage-doctor": {
+      "title": "Create more information doctors",
+      "select-doctor": "Choose doctor",
+      "intro": "Introduction",
+      "add": "Add",
+      "save": "Save",
+      "price": "Price",
+      "payment": "Payment",
+      "province": "Province",
+      "nameClinic": "Clinic's name",
+      "addressClinic": "Clinic's address",
+      "note": "Note"
+    }
   }
 }
