--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -34,6 +34,9 @@
       "manage-specialty": "Quản lí chuyên khoa",
       "handbook": "Cẩm nang",
       "manage-handbook": "Quản lí cẩm nang"
+    },
+    "doctor": {
+      "manage-schedule": "Quản lí kế hoạch khám bệnh"
     }
   },
   "manage-user": {
@@ -55,5 +58,34 @@
   "homepage": {
     "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
     "more-inf": "Xem thêm"
+  },
+  "manage-schedule": {
+    "title": "Quản lí kế hoạch khám bệnh của bác sĩ",
+    "choose-doctor": "Chọn bác sĩ",
+    "choose-date": "Chọn ngày",
+    "save": "Lưu thông tin"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Lịch khám",
+      "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác!",
+      "choose": "Chọn ",
+      "book-free": " và đặt (miễn phí)"
+    }
+  },
+  "admin": {
+    "manage-doctor": {
+      "title": "Tạo thêm thông tin bác sĩ",
+      "select-doctor": "Chọn bác sĩ",
+      "intro": "Thông tin giới thiệu",
+      "add": "Tạo thông tin",
+      "save": "Lưu thông tin",
+      "price": "Giá khám bệnh",
+      "payment": "Phương thức thanh toán",
+      "province": "Tỉnh thành",
+      "nameClinic": "Tên phòng khám",
+      "addressClinic": "Địa chỉ phòng khám",
+      "note": "Ghi chú"
+    }
   }
 }
