--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -71,6 +71,27 @@
       "no-schedule": "The doctors do not have appointments during this time, please choose another time!",
       "choose": "Choose ",
       "book-free": " and book (free)"
+    },
+    "extra-infor-doctor": {
+      "text-address": "Address of examination",
+      "price": "Examination price:",
+      "detail": "See details",
+      "payment": "The patient cay pay the cost in the form of:",
+      "hide-price": "Hide price list"
+    },
+    "booking-modal": {
+      "title": "Information on scheduling medical examinations",
+      "fullName": "Full name",
+      "phoneNumber": "Phone number",
+      "address": "Address",
+      "email": "Email",
+      "reason": "Medical examination reason",
+      "birthday": "Birthday",
+      "gender": "Gender",
+      "btnConfirm": "Confirm",
+      "cancel": "Cancel",
+      "priceBooking": "Free booking",
+      "price": "Examination price :"
     }
   },
   "admin": {
