--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,7 +57,9 @@
   },
   "homepage": {
     "outstanding-doctor": "Last week's featured doctor",
-    "more-inf": "More Infor"
+    "more-inf": "More Infor",
+    "speciality-popular": "Popular specialties",
+    "more-infor": "More infor"
   },
   "manage-schedule": {
     "title": "Manage doctor's examination plan",
